# onion-network

./: .gitignore  .gitmodules  .rgignore  Cargo.toml  README.md  run.sh  rustfmt.toml  serve.sh
chain/api/: Cargo.toml
chain/api/src/: lib.rs
chain/types/: Cargo.toml  metadata.scale
chain/types/src/: lib.rs
chat/client/: Cargo.toml  index.html
chat/client-node/: Cargo.toml  build-package.sh
chat/client-node/src/: api.rs  chain.rs  lib.rs  node.rs  requests.rs  vault.rs
chat/client/.cargo/: config.toml
chat/client/assets/: script.js  style.css
chat/client/src/: chat.rs  db.rs  file_upload.rs  login.rs  main.rs  profile.rs
chat/client/wallet-integration/: integration.js  package.json
chat/server/: Cargo.toml
chat/server/src/: api.rs  handlers.rs  main.rs  reputation.rs  storage.rs  tests.rs
chat/server/src/api/: chat.rs  profile.rs
chat/server/src/handlers/: chat.rs  profile.rs
chat/server/src/storage/: chat.rs  profile.rs
chat/spec/: Cargo.toml
chat/spec/src/: chat.rs  lib.rs  profile.rs
contracts/node_staker/: Cargo.toml  lib.rs
contracts/user_manager/: Cargo.toml  lib.rs
core/chain-api/: Cargo.toml
core/chain-api/src/: lib.rs
core/chain-types/: Cargo.toml
core/chain-types/src/: lib.rs
core/chat-spec/: Cargo.toml
core/chat-spec/src/: chat.rs  lib.rs  profile.rs
core/crypto/: Cargo.toml
core/crypto/src/: enc.rs  hash.rs  lib.rs  sign.rs
core/dht/: Cargo.toml
core/dht/src/: lib.rs
core/onion/: Cargo.toml
core/onion/src/: behaviour.rs  handler.rs  key_share.rs  lib.rs  packet.rs  tests.rs
core/rpc/: Cargo.toml
core/rpc/src/: lib.rs
core/storage-spec/: Cargo.toml
core/storage-spec/src/: db.rs  metabase.rs  protocol.rs  sorted_compact_vec.rs
core/storage-spec/src/metabase/: disk_pool.rs
core/streaming/: Cargo.toml
core/streaming/src/: lib.rs
crypto/berkleamp-welch/src/: galois.rs  math.rs
crypto/crypto/: Cargo.toml
crypto/crypto/src/: enc.rs  hash.rs  lib.rs  proof.rs  sign.rs
crypto/double-ratchet/: Cargo.toml
crypto/double-ratchet/src/: lib.rs
crypto/falcon/: injected_code.rs  transpile.sh
crypto/falcon/falcon/: Cargo.toml  lib.rs
crypto/falcon/falcon/src/: codec.rs  common.rs  fft.rs  fpr.rs  keygen.rs  pqclean.rs  rng.rs  sign.rs  vrfy.rs
crypto/kyber/: Cargo.toml
crypto/kyber/src/: cbd.rs  lib.rs  ntt.rs  params.rs  poly.rs  polyvec.rs  symetric.rs  verify.rs
crypto/merkle-tree/src/: lib.rs
crypto/opfusk/: Cargo.toml
crypto/opfusk/src/: lib.rs
node_keys/: node1.keys  node10.keys  node11.keys  node12.keys  node13.keys  node14.keys  node15.keys  node2.keys  node3.keys  node4.keys  node5.keys  node6.keys  node7.keys  node8.keys  node9.keys
node_mnemonics/: storage-node-storage-node.mnem  storage-satelite-storage-satelite.mnem
nodes/client/: Cargo.toml  index.html
nodes/client-node/: Cargo.toml
nodes/client-node/src/: api.rs  lib.rs
nodes/client/assets/: script.js  style.css
nodes/client/src/: chain.rs  chat.rs  login.rs  main.rs  node.rs  profile.rs  protocol.rs
nodes/client/wallet-integration/: integration.js
nodes/satelite/: Cargo.toml
nodes/satelite/src/: main.rs  storage.rs
nodes/server/: Cargo.toml
nodes/server/src/: handlers.rs  main.rs  tests.rs
nodes/server/src/handlers/: chat.rs  populating.rs  profile.rs  replicated.rs  retry.rs
nodes/storage/: Cargo.toml
nodes/topology-vis/: Cargo.toml  build.sh
nodes/topology-vis/src/: main.rs
pocs/kyber_from_mnemonic/: Cargo.toml  example.sh
pocs/kyber_from_mnemonic/src/: main.rs
protocols/dht/: Cargo.toml
protocols/dht/src/: lib.rs
protocols/gateway/: Cargo.toml
protocols/gateway/src/: lib.rs
protocols/onion/: Cargo.toml  README.md
protocols/onion/src/: behaviour.rs  key_share.rs  lib.rs  packet.rs  tests.rs
protocols/rpc/: Cargo.toml
protocols/rpc/src/: lib.rs
protocols/streaming/: Cargo.toml
protocols/streaming/src/: lib.rs
protocols/topology-vis/: Cargo.toml  build.sh  index.html
protocols/topology-vis/src/: main.rs
protocols/topology-wrapper/: Cargo.toml
protocols/topology-wrapper/src/: lib.rs
storage/berkleamp-welch/src/: fec.rs  lib.rs
storage/node/: Cargo.toml
storage/node/src/: client.rs  main.rs  satelite.rs  storage.rs
storage/satelite/: Cargo.toml
storage/satelite/src/: client.rs  main.rs  node.rs  storage.rs
storage/spec/: Cargo.toml
storage/spec/src/: handler.rs  lib.rs  metabase.rs  sorted_compact_vec.rs  uri.rs
storage/spec/src/metabase/: disk_pool.rs
tests/init-transfer/: Cargo.toml
tests/init-transfer/src/: main.rs
tests/runner/: Cargo.toml
tests/runner/src/: main.rs
utils/berkleamp-welch/: Cargo.toml  build.rs
utils/berkleamp-welch/src/: galois.rs
utils/chain-helper/: Cargo.toml
utils/chain-helper/src/: main.rs
utils/codec/: Cargo.toml
utils/codec-derive/: Cargo.toml
utils/codec-derive/src/: lib.rs
utils/codec/src/: impls.rs  lib.rs  std_impls.rs
utils/component-utils/: Cargo.toml
utils/component-utils/src/: codec.rs  crypto.rs  lib.rs  proof.rs  stream.rs
utils/config/: Cargo.toml
utils/config/src/: lib.rs
utils/contract-macro/: Cargo.toml
utils/contract-macro/src/: lib.rs
utils/contract_macro/: Cargo.toml
utils/contract_macro/src/: lib.rs
utils/falcon/: .gitignore  api_stubs.rs  injected_code.rs  libc_stubs.rs  mem_stubs.rs  refactor_shake_file.sh  shake_stubs.rs  transpile.sh
utils/falcon/falcon/: Cargo.toml  lib.rs
utils/falcon/falcon/src/: codec.rs  common.rs  fft.rs  fpr.rs  keygen.rs  pqclean.rs  rng.rs  sign.rs  vrfy.rs
utils/handlers/: Cargo.toml
utils/handlers/src/: lib.rs
utils/kyber/: Cargo.toml
utils/kyber/src/: barrett.rs  indcpa.rs  kem.rs  lib.rs  mondgomery.rs
utils/merkle-tree/: Cargo.toml
utils/merkle-tree/src/: lib.rs
utils/mnemgen/: Cargo.toml
utils/mnemgen/src/: main.rs
utils/topology-wrapper/: Cargo.toml
utils/topology-wrapper/src/: lib.rs
utils/websocket-websys/: Cargo.toml
utils/websocket-websys/src/: lib.rs
whitepaper/: book.toml  mermaid-init.js  package.json
whitepaper/src/: SUMMARY.md  chat.md  storage.md
