[workspace]
resolver = "2"
members = [
	"utils/*",
	"tests/*",
	"protocols/*",
	"contracts/*",
	"crypto/falcon/falcon",
	"crypto/*",
	"chat/*",
	"chain/*",
]

exclude = [
	"crypto/falcon",
	"chain/substrate-node-template",
]

[workspace.lints.clippy]
all = "warn"
unnecessary_wraps = "warn"
needless_return = "allow"

[workspace.package]
repository = "https://github.com/jakubDoka/orion-network"
readme = "README.md"
keywords = ["network", "decentralized", "polkadot", "pqc"]
categories = ["networking", "cryptography", "blockchain"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
libp2p = "0.53.2"
log = "0.4.20"
futures = "0.3.30"
anyhow = "1.0.80"
thiserror = "1.0.58"

dht = { path = "protocols/dht" }
onion = { path = "protocols/onion" }
rpc = { path = "protocols/rpc" }
streaming = { path = "protocols/streaming" }
topology-wrapper = { path = "protocols/topology-wrapper" }
topology-vis = { path = "protocols/topology-vis" }

node_staker = { path = "contracts/node_staker" }
user_manager = { path = "contracts/user_manager" }

chat-client-node = { path = "chat/client-node", default-features = false }
chat-client = { path = "chat/client" }
chat-server = { path = "chat/server" }
chat-spec = { path = "chat/spec" }

satelite = { path = "nodes/satelite" }
storage = { path = "nodes/storage" }
storage-spec = { path = "nodes/storage-spec" }

init-transfer = { path = "tests/init-transfer" }
runner = { path = "tests/runner" }

berkleamp-welch = { path = "crypto/berkleamp-welch", features = ["simd"] }
crypto = { path = "crypto/crypto" }
falcon = { path = "crypto/falcon/falcon" }
kyber = { path = "crypto/kyber" }
merkle-tree = { path = "crypto/merkle-tree" }
double-ratchet = { path = "crypto/double-ratchet" }

codec-derive = { path = "utils/codec-derive" }
codec = { path = "utils/codec", default-features = false }
component-utils = { path = "utils/component-utils" }
config = { path = "utils/config" }
contract-macro = { path = "utils/contract-macro" }

chain-api = { path = "chain/api", default-features = false }
chain-types = { path = "chain/types", default-features = false }

[profile.native-optimized]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.falcon]
overflow-checks = false
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3

