[workspace]
resolver = "2"
members = [
	"utils/*",
	"tests/*",
	"protocols/*",
	"contracts/*",
	"crypto/falcon/falcon",
	"crypto/*",
	"chat/*",
	"chain/*",
]

exclude = [
	"crypto/falcon",
	"chain/substrate-node-template",
]

[workspace.lints.clippy]
all = "warn"
unnecessary_wraps = "warn"
needless_return = "allow"

[workspace.package]
repository = "https://github.com/jakubDoka/orion-network"
readme = "README.md"
keywords = ["network", "decentralized", "polkadot", "pqc"]
categories = ["networking", "cryptography", "blockchain"]
license = "MIT"
edition = "2021"

[workspace.dependencies]
libp2p = "0.53.2"
log = "0.4.20"
futures = "0.3.30"
anyhow = "1.0.80"
thiserror = "1.0.58"

dht = { path = "protocols/dht" }
onion = { path = "protocols/onion" }
rpc = { path = "protocols/rpc" }
streaming = { path = "protocols/streaming" }
topology-wrapper = { path = "protocols/topology-wrapper" }

chat-client-node = { path = "chat/client-node", default-features = false }
chat-spec = { path = "chat/spec" }
crypto = { path = "crypto/crypto" }
falcon = { path = "crypto/falcon/falcon" }
kyber = { path = "crypto/kyber" }

codec-derive = { path = "utils/codec-derive" }
codec = { path = "utils/codec" }
component-utils = { path = "utils/component-utils" }
config = { path = "utils/config" }
contract-macro = { path = "utils/contract-macro" }

chain-api = { path = "chain/api", default-features = false }
chain-types = { path = "chain/types", default-features = false }

[profile.native-optimized]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev.package.falcon]
overflow-checks = false
opt-level = 3

[profile.dev.package.argon2]
opt-level = 3

