[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chain-api"
version = "0.1.0"
edition = { workspace = true }
description = "interface for interacting with chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.29", features = ["executor"] }
hex = "0.4.3"
log = { workspace = true }
parity-scale-codec = "3.6.5"
serde_json = "1.0.108"
subxt = { version = "0.35", default-features = false }
subxt-signer = { version = "0.35", features = ["subxt", "sr25519", "std"], default-features = false }
tokio = { version = "1.37.0", optional = true }
rand_chacha = "0.3.1"
wasm-bindgen-futures = { version = "0.4.42", optional = true }

chain-types = { workspace = true }
crypto = { workspace = true }
codec.workspace = true
anyhow.workspace = true
dht.workspace = true
libp2p.workspace = true
clap = { version = "4.5.4", features = ["derive", "env"] }

[features]
native = ["subxt/default", "subxt-signer/default", "chain-types/native", "tokio"]
web = ["subxt/web", "subxt-signer/web", "subxt/jsonrpsee", "chain-types/web", "wasm-bindgen-futures"]
wasm-bindgen-futures = ["dep:wasm-bindgen-futures"]

[lints]
workspace = true
