[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chain-types"
version = "0.1.0"
edition = { workspace = true }
description = "isolated macros generating loads of code"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contract-macro = { workspace = true }
parity-scale-codec = "3.6.9"
subxt = { version = "0.34.0", default-features = false }
subxt-signer = { version = "0.34.0", default-features = false }

[features]
native = ["subxt/default", "subxt-signer/default"]
web = ["subxt/web", "subxt-signer/web", "subxt/jsonrpsee"]

[lints]
workspace = true
