[package]
name = "chat-client-node"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen-futures = "0.4.42"
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
libp2p = { workspace = true, features = ["macros", "yamux", "wasm-bindgen", "websocket-websys"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = "0.4.3"
instant = "0.1.12"
  
dht = { workspace = true }
onion = { workspace = true }
crypto = { workspace = true }
chat-spec = { workspace = true }
component-utils = { workspace = true }
codec.workspace = true
double-ratchet = { workspace = true }
merkle-tree = { workspace = true }
storage-spec.workspace = true
streaming.workspace = true
opfusk = { workspace = true }
rpc.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chain-api]
workspace = true
features = ["native"]
default-features = false 

[target.'cfg(target_arch = "wasm32")'.dependencies.chain-api]
workspace = true
features = ["web"]
default-features = false 


[dependencies.web-sys]
version = "0.3.65"
features = [
  "Document",
  "Window",
  "console",
  "Event",
  "FileReader",
  "File",
  "FileList",
  "HtmlInputElement",
  "BlobPropertyBag",
  "Storage",
  "CssStyleDeclaration",]

[lints]
workspace = true

[features]
default = ["api"]
building = []
api = []
