[package]
name = "chat-client-node"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = "0.4.3"
instant = "0.1.12"

dht = { workspace = true }
onion = { workspace = true }
chat-spec = { workspace = true }
component-utils = { workspace = true }
codec.workspace = true
storage-spec.workspace = true
streaming.workspace = true
opfusk = { workspace = true }
merkle-tree = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chain-api = { workspace = true, features = ["native"], default-features = false }
libp2p = { workspace = true, features = ["macros", "yamux", "tcp", "tokio"] }
crypto = { workspace = true }
double-ratchet = { workspace = true }
tokio = { version = "1.0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chain-api = { workspace = true, features = ["web"], default-features = false }
libp2p = { workspace = true, features = ["macros", "yamux", "wasm-bindgen"] }
websocket-websys = { workspace = true }
wasm-bindgen-futures = { version = "0.4.42" }
crypto = { workspace = true, features = ["wasm"] }
double-ratchet = { workspace = true, features = ["wasm"] }
base64 = "0.22.1"


[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.65"
features = [
  "Document",
  "Window",
  "console",
  "Event",
  "FileReader",
  "File",
  "FileList",
  "HtmlInputElement",
  "BlobPropertyBag",
  "Storage",
  "CssStyleDeclaration",]

[lints]
workspace = true

[features]
default = []
building = []
api = []
