[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chat-server"
version = "0.1.0"
edition = { workspace = true }
description = "node serving users of a chat, storing latest messages and finalizing message blocks"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
env_logger = "0.11.0"
libp2p = { workspace = true, features = ["tcp", "macros", "tokio", "yamux", "websocket", "dns"] }
log = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }
dashmap = "5.5.3"
arrayvec = "0.7.4"

topology-wrapper = { workspace = true }
chain-api = { workspace = true, features = ["native"] }
chat-spec = { workspace = true }
config = { workspace = true }
crypto = { workspace = true }
dht = { workspace = true }
onion = { workspace = true }
codec.workspace = true
handlers.workspace = true
component-utils.workspace = true
opfusk = { workspace = true }

[lints]
workspace = true
