[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chat-spec"
version = "0.1.0"
edition = { workspace = true }
description = "common declarations that client and server share"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }
thiserror = "1.0.50"

chain-api = { workspace = true }
crypto = { workspace = true }
bitflags = "2.4.2"
codec.workspace = true
arrayvec = "0.7.4"
merkle-tree = { version = "0.1.0", path = "../../crypto/merkle-tree" }
futures.workspace = true
anyhow.workspace = true
log.workspace = true

[lints]
workspace = true
