[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "chain-api"
version = "0.1.0"
edition = "2021"
description = "interface for interacting with chain"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake2 = "0.10.6"
chain-types = { version = "0.1.0", path = "../chain-types" }
contract-macro = { version = "0.1.0", path = "../../utils/contract_macro" }
crypto = { version = "0.1.0", path = "../crypto" }
futures = { version = "0.3.29", features = ["executor"] }
hex = "0.4.3"
log = "0.4.20"
parity-scale-codec = "3.6.5"
scale-encode = "0.5.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
subxt = { version = "0.33", default-features = false }
subxt-signer = { version = "0.33", features = ["subxt", "sr25519"], default-features = false }
thiserror = "1.0.50"

[features]
native = ["subxt/default", "subxt-signer/default", "chain-types/native"]
web = ["subxt/web", "subxt-signer/web", "subxt/jsonrpsee", "chain-types/web"]

[lints]
workspace = true
