[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "crypto"
version = "0.1.0"
edition = "2021"
description = "collection of swappable cryptographic primitives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes", "rand_core"], default-features = false }
blake3 = { version = "1.5.0", default-features = false }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"], default-features = false }
kyber = { path = "../../utils/kyber" }
falcon = { path = "../../utils/falcon/falcon" }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], default-features = false }
rand_core = { version = "0.6.4", default-features = false }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[lints]
workspace = true
