[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "onion"
version = "0.1.0"
edition = "2021"
description = "libp2p protocols for onion-like routing with pqc security"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
crypto = { version = "0.1.0", path = "../crypto" }
futures = "0.3.28"
instant = "0.1.12"
libp2p = { version = "0.53.0" }
log = "0.4.20"
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
streaming = { version = "0.1.0", path = "../streaming" }
thiserror = "1.0.50"
void = "1.0.2"

[dev-dependencies]
env_logger = "0.11.0"
libp2p = { version = "0.53.0", features = ["tokio", "tcp", "noise", "yamux", "macros"] }
dht = { path = "../dht" }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt", "macros", "time", "rt-multi-thread"] }

[features]
wasm = ["instant/wasm-bindgen"]

[lints]
workspace = true
