[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "onion"
version = "0.1.0"
edition = { workspace = true }
description = "libp2p protocols for onion-like routing with pqc security"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
futures = { workspace = true }
instant = "0.1.12"
libp2p = { workspace = true }
log = { workspace = true }
spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
thiserror = "1.0.50"
void = "1.0.2"

streaming = { workspace = true }
component-utils = { workspace = true }
crypto = { workspace = true }

[dev-dependencies]
env_logger = "0.11.0"
libp2p = { workspace = true, features = ["tokio", "tcp", "noise", "yamux", "macros"] }
dht = { path = "../dht" }
rand = "0.8.5"
tokio = { version = "1.32.0", features = ["rt", "macros", "time", "rt-multi-thread"] }

[features]
wasm = ["instant/wasm-bindgen"]

[lints]
workspace = true
