[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "rpc"
version = "0.1.0"
edition = "2021"
description = "simple rpc calls for libp2p"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
libp2p = { version = "0.53.1" }
log = "0.4.20"
streaming = { version = "0.1.0", path = "../streaming" }

[dev-dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt", "time"] }
libp2p = { version = "0.53.1", features = ["noise", "yamux", "tcp", "macros", "tokio"]}
env_logger = "0.11.0"
dht = { path = "../dht" }

[lints]
workspace = true
