[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "crypto"
version = "0.1.0"
edition = { workspace = true }
description = "collection of swappable cryptographic primitives"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = ["aes", "rand_core"], default-features = false }
blake3 = { version = "1.5.0", default-features = false }
ed25519-dalek = { version = "2.0.0", features = ["rand_core"], default-features = false }
x25519-dalek = { version = "2.0.0", features = ["static_secrets"], default-features = false }
rand_core = { version = "0.6.4", default-features = false }

kyber = { workspace = true }
falcon = { workspace = true }
codec = { workspace = true, optional = true, features = ["derive"] }
arrayvec = { workspace = true, optional = true }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[features]
default = ["codec"]

[lints]
workspace = true
