[package]
name = "double-ratchet"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crypto.workspace = true
hkdf = "0.12.4"
sha2 = { version = "0.10.8", default-features = false }

[lints]
workspace = true
