[package]
name = "double-ratchet"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
arrayvec = "0.7.4"
codec = { workspace = true }
hkdf = "0.12.4"
kyber.workspace = true
rand_core = { version = "0.6.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[lints]
workspace = true
