[package]
name = "opfusk"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
crypto.workspace = true
env_logger = "0.11.3"
futures.workspace = true
libp2p-core = "0.41.2"
libp2p-identity = "0.2.8"
log.workspace = true
multihash = "0.19.1"
primitive-types = "0.12.2"
rand_core = "0.6.4"
thiserror.workspace = true

[lints]
workspace = true

[dev-dependencies]
dht.workspace = true
libp2p = { workspace = true, features = ["ping", "tcp", "tokio", "yamux"] }
streaming.workspace = true
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
