[package]
name = "client-node"
version = "0.1.0"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rand = "0.8.5"
wasm-bindgen-futures = "0.4.42"
argon2 = { version = "0.5.2", default-features = false, features = ["alloc"] }
libp2p = { workspace = true, features = ["noise", "macros", "yamux", "wasm-bindgen"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
hex = "0.4.3"
instant = "0.1.12"
  
websocket-websys = { workspace = true }
dht = { workspace = true }
onion = { workspace = true }
crypto = { workspace = true }
chat-spec = { workspace = true }
component-utils = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.chain-api]
workspace = true
features = ["native"]
default-features = false 

[target.'cfg(target_arch = "wasm32")'.dependencies.chain-api]
workspace = true
features = ["web"]
default-features = false 


[dependencies.web-sys]
version = "0.3.65"
features = [
  "Document",
  "Window",
  "console",
  "Event",
  "FileReader",
  "File",
  "FileList",
  "HtmlInputElement",
  "BlobPropertyBag",
  "Storage",
  "CssStyleDeclaration",]

[lints]
workspace = true
