[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "satelite"
version = "0.1.0"
edition = "2021"
description = "node storing the data mapping on the network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc = { version = "0.1.0", path = "../../core/rpc" }
dht = { version = "0.1.0", path = "../../core/dht" }
crypto = { version = "0.1.0", path = "../../core/crypto" }
chain-api = { version = "0.1.0", path = "../../core/chain-api", features = ["native"] }
storage-spec = { version = "0.1.0", path = "../../core/storage-spec" }

topology-wrapper = { version = "0.1.0", path = "../../utils/topology-wrapper" }
component-utils = { version = "0.1.0", path = "../../utils/component-utils" }
config = { version = "0.1.0", path = "../../utils/config" }

anyhow = "1.0.75"
bitflags = "2.4.1"
env_logger = "0.11.0"
libp2p = { version = "0.53.0", features = ["quic", "noise", "macros", "tokio", "yamux", "websocket", "dns"] }
log = "0.4.20"
rand_core = { version = "0.6.4", features = ["getrandom"] }
smallvec = "1.11.1"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }
streaming = { version = "0.1.0", path = "../../core/streaming" }

[lints]
workspace = true
