[package]
repository = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
name = "satelite"
version = "0.1.0"
edition = { workspace = true }
description = "node storing the data mapping on the network"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
bitflags = "2.4.1"
env_logger = "0.11.0"
libp2p = { workspace = true, features = ["quic", "noise", "macros", "tokio", "yamux", "websocket", "dns"] }
log = { workspace = true }
rand_core = { version = "0.6.4", features = ["getrandom"] }
smallvec = "1.11.1"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["rt", "macros", "time"] }

streaming = { workspace = true }
rpc = { workspace = true }
dht = { workspace = true }
crypto = { workspace = true }
chain-api = { workspace = true }
storage-spec = { workspace = true }
topology-wrapper = { workspace = true }
component-utils = { workspace = true }
config = { workspace = true }


[lints]
workspace = true
